# solana-token22

./: Cargo.toml  README.md
examples/: call_token22.rs  deploy.sh  utlis.rs
src/: check.rs  instruction.rs  lib.rs
