[package]
name = "token22"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
solana-program = {workspace = true}
borsh = {workspace = true}
spl-token-2022 = {workspace = true}
spl-associated-token-account = {workspace = true}

[dev-dependencies]
# Client dependencies (for examples only, not compiled into on-chain program)
solana-client = "2.1.0"
solana-sdk = "2.1.0"
log = "0.4.22"
env_logger = "0.10.0"
dotenvy = "0.15.7"
serde_json = "1.0.132"
